# box

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LINUX.md  README.md  SPEC.html  SPEC.md  SPEC.typ  spec.css
.github/workflows/: rust.yml  spec.yml
box/: Cargo.toml  LICENSE  README.md  build.rs
box-format/: Cargo.toml  LICENSE-MIT  README.md  SPEC.md  build.rs
box-format/docs/features/: header.feature
box-format/docs/features/header/: alignment.feature  magic_bytes.feature  trailer.feature  version.feature
box-format/examples/: test.rs
box-format/src/: compression.rs  de.rs  ffi.rs  file.rs  hashing.rs  header.rs  lib.rs  record.rs  ser.rs
box-format/src/file/: meta.rs  mod.rs  reader.rs  writer.rs
box-format/src/path/: error.rs  mod.rs
box/src/: error.rs  main.rs  util.rs
box/src/commands/: create.rs
box_format/: Cargo.toml
box_format/src/: lib.rs
cli/: Cargo.toml  README.md  build.rs
cli/src/: cli.rs  error.rs  main.rs  util.rs
cli/src/commands/: create.rs  extract.rs  info.rs  list.rs  mod.rs  validate.rs
crates/box-ffi/: Cargo.toml
crates/box-ffi/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: compression.rs  header.rs  lib.rs  path.rs  record.rs
crates/fskitbox/: Cargo.toml  Info.plist  README.md  fskitbox.entitlements  project.yml
crates/fskitbox/extension/: main.m
crates/fskitbox/host/: Info.plist  main.swift
crates/fskitbox/src/: extension.rs  filesystem.rs  item.rs  lib.rs  volume.rs
crates/fskitbox/src/bindings/: filesystem.rs  framework.rs  mod.rs  resource.rs  types.rs  volume.rs
crates/fst/: Cargo.toml
crates/fst/benches/: lookup.rs
crates/fst/src/: builder.rs  error.rs  fst.rs  lib.rs  node.rs
crates/fst/tests/: large_fst.rs
crates/fusebox/: Cargo.toml  README.md
crates/fusebox/src/: lib.rs  main.rs  multi.rs
crates/projfsbox/: Cargo.toml
crates/projfsbox/src/: callbacks.rs  enumeration.rs  error.rs  lib.rs  main.rs  path.rs  provider.rs  time.rs
fusebox/: Cargo.toml
fusebox/src/: main.rs
kmod/: Kconfig  Makefile  README.md  rust_helpers.c  super.c
kmod/include/: boxfs.h
kmod/rust/: Cargo.toml  Kbuild  bindings.rs  error.rs  lib.rs  metadata.rs  parser.rs
selfextract/: Cargo.toml  build-mac.sh
selfextract/src/: main.rs
src/: attrs.rs  checksum.rs  compat.rs  compression.rs  counting.rs  de.rs  dict.rs  encode.rs  ffi.rs  fs.rs  hashing.rs  header.rs  lib.rs  parse.rs  record.rs  ser.rs
src/aio/: mod.rs  reader.rs  tests.rs  writer.rs
src/compression/: mod.rs  xz.rs  zstd.rs
src/core/: meta.rs  mod.rs  reader.rs  writer.rs
src/de/: common.rs  mod.rs  v0.rs  v1.rs
src/file/: meta.rs  mod.rs  reader.rs  writer.rs
src/path/: error.rs  mod.rs
src/ser/: mod.rs
src/sync/: mod.rs  reader.rs  tests.rs  writer.rs
tests/: symlinks.rs
