[package]
name = "box-format"
description = "Support library for the Box open standard archive format."
version = "0.4.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/box"

[lib]
crate-type = ["rlib"]

[dependencies]
box-fst.workspace = true
byteorder.workspace = true
mmap-io.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
tokio-util = { workspace = true, features = ["compat"] }
async-walkdir.workspace = true
futures.workspace = true
blake3 = { workspace = true, features = ["traits-preview", "rayon", "mmap"] }
hex.workspace = true
pathdiff.workspace = true
unic-normal.workspace = true
unic-ucd.workspace = true
relative-path.workspace = true
fastvint = { workspace = true, features = ["async-tokio"] }
tracing.workspace = true
serde_json.workspace = true
lru.workspace = true
thiserror.workspace = true
digest.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
string-interner.workspace = true
xattr = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
zstd-safe = { workspace = true, optional = true }
xz2 = { workspace = true, optional = true }

[features]
default = ["xz", "zstd", "writer", "reader", "xattr"]
reader = []
writer = ["reader"]

xz = ["dep:xz2"]
zstd = ["dep:zstd", "dep:zstd-safe"]
xattr = ["dep:xattr"]

[workspace]
resolver = "3"
members = ["cli", "crates/*"]

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
futures = "0.3"
async-walkdir = "2.1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1.3.4"
fastvint = { git = "https://github.com/bbqsrc/fastvlq", branch = "vint" }

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Crypto/hashing
blake3 = "1"

# Compression
async-compression = { version = "0.4", default-features = false, features = ["tokio"] }
tokio-snappy = { version = "0.2.0" }
zstd = "0.13.3"
zstd-safe = "7.2"
xz2 = "0.1.7"

# System
libc = "0.2"
sysinfo = "0.37"
tempfile = "3"
num_cpus = "1.16"
xattr = "1"

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
glob = "0.3"
humansize = { version = "2.1", features = ["impl_style"] }
chrono = "0.4"
wild = "2.0"
textwrap = "0.16"

# Other
lru = "0.14"
mmap-io = { version = "0.9.4", features = ["async", "hugepages"] }
hex = "0.4"
pathdiff = "0.2"
unic-normal = "0.9"
unic-ucd = "0.9"
relative-path = "2.0"
cffi = { git = "https://github.com/cffi-rs/cffi", branch = "next" }
pin-project-lite = "0.2"
digest = "0.10"
string-interner = "0.19"
smallvec = "1.13"
fuser = { git = "https://github.com/cberner/fuser" }

# objc2 for macOS framework bindings
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"

# Workspace crates
box-format = { version = "0.4.0", path = "." }
box-fst = { version = "0.1.0", path = "crates/fst" }
mimalloc = { version = "0.1", features = ["v3"] }
