[package]
name = "box-format"
description = "Support library for the Box open standard archive format."
version = "0.3.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/box"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
byteorder = "1.3.4"
memmap = "0.7.0"
comde = { version = "0.2.3", default-features = false }
pathdiff = "0.2.0"
unic-normal = "0.9.0"
unic-ucd = "0.9.0"
relative-path = "1.3.2"
fastvlq = "1"
cffi = { version = "0.1", optional = true }
libc = { version = "0.2.79", optional = true }
log = "0.4.11"
pathtrie = "0.1.1"
tracing = "0.1.21"
serde_json = "1.0.64"

[features]
default = ["brotli", "xz", "deflate", "zstd", "snappy", "writer", "reader"]
reader = []
writer = ["reader"]

brotli = ["comde/brotli"]
xz = ["comde/xz"]
deflate = ["comde/deflate"]
zstd = ["comde/zstandard"]
snappy = ["comde/snappy"]

ffi = ["libc", "cffi"]
