[package]
name = "box-format"
description = "Support library for the Box open standard archive format."
version = "0.3.3"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/box"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
byteorder = "1.3.4"
mmap-io = { version = "0.9.4", features = ["async"] }
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-compression = { version = "0.4.36", default-features = false, features = ["tokio"] }
tokio-snappy = { version = "0.2.0", optional = true }
pathdiff = "0.2.0"
unic-normal = "0.9.0"
unic-ucd = "0.9.0"
relative-path = "2.0.1"
fastvlq = { git = "https://github.com/bbqsrc/fastvlq", features = ["async-tokio"] }
cffi = { version = "0.1", optional = true }
libc = { version = "0.2.79", optional = true }
log = "0.4.11"
tracing = "0.1.21"
serde_json = "1.0.64"
thiserror = "2.0.17"
pin-project-lite = "0.2"

[features]
default = ["brotli", "xz", "deflate", "zstd", "snappy", "writer", "reader"]
reader = []
writer = ["reader"]

brotli = ["async-compression/brotli"]
xz = ["async-compression/xz"]
deflate = ["async-compression/deflate"]
zstd = ["async-compression/zstd"]
snappy = ["tokio-snappy"]

ffi = ["libc", "cffi"]
