[package]
name = "box"
description = "Box open standard archiver binary."
version = "0.3.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "EUPL-1.2"
repository = "https://github.com/bbqsrc/box"

[[bin]]
name = "box"
path = "src/main.rs"

[dependencies]
box-format = { version = "0.3.0", path = "../box-format" }
structopt = "0.3.17"
humansize = "1.1.0"
byteorder = "1.3.4"
chrono = "0.4.15"
crc32fast = "1.2.0"
jwalk = "0.5.1"
rayon = "1.5.0"
thiserror = "1.0.21"
anyhow = "1.0.32"
tracing = "0.1.19"
tracing-subscriber = { version = "0.2.11", features = ["fmt"] }
wild = "2.0.4"

[features]
default = ["selfextract"]
selfextract = []