[package]
name = "box-bin"
description = "Box open standard archiver binary."
version = "0.3.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "EUPL-1.2"
repository = "https://github.com/bbqsrc/box"

[[bin]]
name = "box"
path = "src/main.rs"

[dependencies]
box-format = { version = "0.3.1", path = "../box-format" }
structopt = "0.3.17"
humansize = "1.1.0"
byteorder = "1.3.4"
chrono = "0.4.15"
crc32fast = "1.2.0"
jwalk = "0.6"
rayon = "1.5.0"
thiserror = "1.0.21"
anyhow = "1.0.52"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wild = "2.0.4"
serde_json = "1.0.64"
textwrap = "0.14"

[features]
default = []
selfextract = []
