[package]
name = "box-bin"
description = "Box open standard archiver binary."
version = "0.4.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/bbqsrc/box"

[[bin]]
name = "box"
path = "src/main.rs"

[dependencies]
box-format = { version = "0.4.0", path = "../box-format" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
async-walkdir = "2.1.0"
futures = "0.3"
structopt = "0.3.17"
humansize = { version = "2.1.3", features = ["impl_style"] }
byteorder = "1.3.4"
chrono = "0.4.15"
crc32fast = "1.2.0"
blake3 = "1"
thiserror = "2.0.17"
anyhow = "1.0.52"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wild = "2.0.4"
serde_json = "1.0.64"
textwrap = "0.16.2"

[features]
default = []
selfextract = []
