[package]
name = "box-cli"
description = "Box open standard archiver binary."
version = "0.4.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/bbqsrc/box"

[[bin]]
name = "box"
path = "src/main.rs"

[dependencies]
box-format = { version = "0.4.0", path = ".." }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
async-walkdir = "2.1.0"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18.3"
glob = "0.3"
humansize = { version = "2.1.3", features = ["impl_style"] }
byteorder = "1.3.4"
chrono = "0.4.15"
blake3 = { version = "1", features = ["digest"] }
thiserror = "2.0.17"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wild = "2.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
textwrap = "0.16.2"
num_cpus = "1.16"

[features]
default = []
selfextract = []
