[package]
name = "box-cli"
description = "Box open standard archiver binary."
version = "0.4.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/bbqsrc/box"

[[bin]]
name = "box"
path = "src/main.rs"

[dependencies]
box-format = { workspace = true, features = ["xattr"] }
fastvint.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
async-walkdir.workspace = true
futures.workspace = true
clap.workspace = true
indicatif.workspace = true
glob.workspace = true
humansize.workspace = true
byteorder.workspace = true
chrono.workspace = true
blake3 = { workspace = true, features = ["digest"] }
thiserror.workspace = true
miette.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wild.workspace = true
serde.workspace = true
serde_json.workspace = true
textwrap.workspace = true
num_cpus.workspace = true

[features]
default = []
selfextract = []
