[package]
name = "box-selfextract"
version = "0.0.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[[bin]]
name = "selfextract"
path = "src/main.rs"

[dependencies]
box-format = { path = "../box-format", default-features = false, features = ["reader", "zstd"] }
memmap2 = "*"
twoway = "0.2.1"
gumdrop = "0.8.0"
tempfile = "3.1.0"
shell-words = "1.0.0"

[profile.release]
lto = "fat"
opt-level = 'z'
panic = "abort"
