[package]
name = "projfsbox"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2024"
description = "Windows ProjFS driver for mounting .box archives as virtual filesystems"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "projfsbox"
path = "src/main.rs"

[dependencies]
box-format.workspace = true
fastvlq.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_ProjectedFileSystem",
    "Win32_System_Console",
    "Win32_System_Memory",
] }
